[gd_scene load_steps=9 format=3 uid="uid://crxmu3jyjtp5k"]

[ext_resource type="Texture2D" uid="uid://bffg2geks82qa" path="res://assets/images/ui/crosshair.png" id="1_8m0i5"]
[ext_resource type="Script" path="res://scripts/nodes/player.gd" id="1_xacpv"]
[ext_resource type="Texture2D" uid="uid://diohd56jxrffh" path="res://assets/images/ui/bigger_crosshair.png" id="2_thlqj"]
[ext_resource type="PackedScene" uid="uid://h2psdxdelsi" path="res://objects/nodes/keyboard.tscn" id="3_onrrl"]
[ext_resource type="Theme" uid="uid://7w454egydi41" path="res://assets/themes/baseUI.tres" id="4_ibprv"]
[ext_resource type="PackedScene" uid="uid://b21q8uts26n5f" path="res://objects/scenes/menus/pause_menu.tscn" id="5_ae3vx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_50fau"]
radius = 0.49
height = 2.75

[sub_resource type="SphereShape3D" id="SphereShape3D_1ngd8"]
radius = 0.25

[node name="player" type="CharacterBody3D" groups=["player"]]
wall_min_slide_angle = 0.0
floor_stop_on_slope = false
floor_constant_speed = true
floor_block_on_wall = false
script = ExtResource("1_xacpv")

[node name="cshape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.325, 0)
shape = SubResource("CapsuleShape3D_50fau")

[node name="pivot" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("SphereShape3D_1ngd8")
spring_length = 0.25

[node name="camera" type="Camera3D" parent="pivot"]
current = true
fov = 70.0
far = 800.0

[node name="raycast_sight" type="RayCast3D" parent="pivot/camera"]
target_position = Vector3(0, 0, -15)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="raycast_sight_short" type="RayCast3D" parent="pivot/camera"]
target_position = Vector3(0, 0, -1.5)
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="crosshair" type="TextureRect" parent="pivot/camera"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_8m0i5")

[node name="bigger_crosshair" type="TextureRect" parent="pivot/camera"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_thlqj")

[node name="achievement_label" type="Label" parent="pivot/camera"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -140.0
offset_right = 1920.0
grow_vertical = 0
theme = ExtResource("4_ibprv")
text = "the achieved"
horizontal_alignment = 1
vertical_alignment = 1

[node name="keyboard" parent="pivot/camera" instance=ExtResource("3_onrrl")]
visible = false

[node name="pivot-backup" type="Node3D" parent="."]

[node name="pause_menu" parent="." instance=ExtResource("5_ae3vx")]

[node name="raycast_bottom_1" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
target_position = Vector3(0, -0.5, -0.4)

[node name="raycast_bottom_2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
target_position = Vector3(0, -0.5, 0.4)

[node name="raycast_bottom_3" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
target_position = Vector3(0.4, -0.5, 0)

[node name="raycast_bottom_4" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
target_position = Vector3(-0.4, -0.5, 0)
